  username and password intended only for one server.

  Mechanize#auth and Mechanize#basic_auth now warn when used.
  
  To fix the warning switch to Mechanize#add_auth which requires at the URI
  the credentials are intended for, the username and the password.
  Optionally an HTTP authentication realm or NTLM domain may be provided.

=== 2.3 / 2012-02-20

* Minor enhancements
  * Add support for the Max-Age attribute in the Set-Cookie header.
  * Added Mechanize::Download#body for compatibility with Mechanize::File when
    using Mechanize#get_file with Mechanize::Image or other Download-based
    pluggable parser.  Issue #202 by angas
  * Mechanize#max_file_buffer may be set to nil to disable creation of
    Tempfiles.

* Bug fixes
  * Applied Mechanize#max_file_buffer to the Content-Encoding handlers as well
    to prevent extra Tempfiles for small gzip or deflate response
  * Increased the default Mechanize#max_file_buffer to 100,000 bytes.  This
    gives ~5MB of response bodies in memory with the default history setting
    of 50 pages (depending on GC behavior).
  * Ignore empty path/domain attributes.
  * Cookies with an empty Expires attribute value were stored as session
    cookies but cookies without the Expires attribute were not.  Issue #78

=== 2.2.1 / 2012-02-13

* Bug fixes
  * Add missing file to the gem, ensure that missing files won't cause
    failures again.  Issue #201 by Alex
  * Fix minor grammar issue in README.  Issue #200 by Shane Becker.

=== 2.2 / 2012-02-12

* API changes
  * MetaRefresh#href is not normalized to an absolute URL, but set to the
    original value and resolved later.  It is even set to nil when the
    Refresh URL is unspecified or empty.

* Minor enhancements
  * Expose ssl_version from net-http-persistent.  Patch by astera.
  * SSL parameters and proxy may now be set at any time.  Issue #194 by
    dsisnero.
  * Improved Mechanize::Page with #image_with and #images_with and